--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,8 @@ en:
       home: "Home"
       help: "Help"
       log_in: "Log In"
+      log_out: "Log Out"
+      profile: "Profile"
     messages:
       success: "Sign in successfully!"
       error: "Sign in fail, please try again!"
@@ -15,9 +17,16 @@ en:
       title: "Home"
     help:
       title: "Help"
+      confirmation: "Confirmation"
+  sessions:
+    new:
+      log_in: "Log In"
+      sign_up_now: "Sign Up Now"
+      new_user: "New User ?"
+  users:
+    new:
       sign_up: "Sign Up"
       create_my_account: "Create My Account"
       confirmation: "Confirmation"
-  sign_up: "Sign Up"
-  confirmation: "Confirmation"
-  create_my_account: "Create My Account"
+  invalid_email_password_combination: "Invalid Email or Password"
+  user_not_found: "User not found"
