--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -10,6 +10,13 @@ vi:
     messages:
       success: "Đăng nhập thành công !"
       error: "Đăng nhập thất bại, vui lòng thử lại !"
+      updated_success: "Cập nhật thành công !"
+      user_deleted: "Xóa thành công"
+      deleted_fail: "Xóa thất bại"
+      user_not_found: "Không tìm thấy người dùng"
+      user_not_logged_in: "Chưa đăng nhập"
+      edit_error: "Sửa thất bại"
+      admin_error: "Bạn không phải là admin, không thể xóa"
   helpers:
     page_title: "Ruby on Rails Tutorials Sample App"
   static_pages:
@@ -29,4 +36,9 @@ vi:
       sign_up: "Đăng ký"
       create_my_account: "Tạo tài khoản mới"
       confirmation: "Xác nhận"
+    delete: "Xóa ?"
+    index:
+      not_found_user: "Không tìm thấy người dùng"
+    edit:
+      update_profile: "Cập nhật thông tin cá nhân"
   invalid_email_password_combination: "Email hoặc Password không hợp lệ"
