--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -17,6 +17,16 @@ vi:
       user_not_logged_in: "Chưa đăng nhập"
       edit_error: "Sửa thất bại"
       admin_error: "Bạn không phải là admin, không thể xóa"
+      account_active: "Tài khoản đã được kích hoạt !"
+      invalid_link: "Không tồn tại đường dẫn này !"
+      account_activation: "Kích hoạt tài khoản"
+      password_reset: "Đặt lại mật khẩu"
+      user_actived: "Người dùng đang được kích hoạt!"
+      password_reset_error: "Lỗi đặt lại mật khẩu"
+      password_update_success: "Cập nhật mật khẩu thành công !"
+      email_instructions: "Email được gửi kèm hướng dẫn đặt lại mật khẩu"
+      email_not_found: "Không tìm thấy địa chỉ email"
+      password_expired: "Việc đặt lại mật khẩu đã hết hạn"
   helpers:
     page_title: "Ruby on Rails Tutorials Sample App"
   static_pages:
@@ -47,6 +57,8 @@ vi:
       welcome_text: "Chào mừng đến với Sample App, chào "
       content: ". Vui lòng kiểm tra gmail để kích hoạt tài khoản của bạn."
       activate: "Kích hoạt"
+    password_reset:
+      title: "Thay đổi mật khẩu"
   invalid_email_password_combination: "Email hoặc Password không hợp lệ"
   not_active: "Kích hoạt tài khoản không thành công. Vui lòng kiểm tra lại !"
   check_email_noti: "Vui lòng kiểm tra gmail để kích hoạt tài khoản"
