--- a/config/locales/activerecord/en.yml
+++ b/config/locales/activerecord/en.yml
@@ -17,3 +17,6 @@ en:
               birthday_within_last_100_years: "must be within the last 100 years"
             gender:
               blank: "can't be blank"
+            content:
+              blank: "can't be blank"
+  must_be_valid: "must be a valid image format"
