--- a/config/locales/activerecord/vi.yml
+++ b/config/locales/activerecord/vi.yml
@@ -15,6 +15,8 @@ vi:
             birthday:
               blank: "Không thể bỏ trống"
               birthday_within_last_100_years: "phải bé hơn 100 tuổi"
-  users:
-    index:
-      all_users: ""
+            gender:
+              blank: "Không thể bỏ trống"
+            content:
+              blank: "Không thể bỏ trống"
+  must_be_valid: "Phải đúng định dạng"
