--- a/config/locales/activerecord/en.yml
+++ b/config/locales/activerecord/en.yml
@@ -20,3 +20,5 @@ en:
             content:
               blank: "can't be blank"
   must_be_valid: "must be a valid image format"
+  following: "Following"
+  followers: "Followers"
