--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -64,7 +64,12 @@ vi:
       change: "Thay đổi"
     show:
       microposts: "Microposts"
+    follow:
+      follow: "Theo dõi"
+    unfollow:
+      unfollow: "Hủy theo dõi"
   user_mailer:
+
     account:
       title: "Sample App"
       welcome_text: "Chào mừng đến với Sample App, chào "
